# tinyland-goo

./: .bazelrc  .bazelrc.flywheel  .envrc  .gitignore  .gitleaks.toml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Justfile  MODULE.bazel  README.md  SECURITY.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tinyland.repo.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  lanes.json
.github/workflows/: ci.yml  deploy-pages.yml  mint-proof.yml
docs/: CI-SCHEMA.md
docs/schemas/: lanes.schema.json  tinyland-repo-manifest.schema.json
klipper/: coverage_gate.cfg  coverage_gate.py
scripts/: cache-attachment-contract.sh  check-conformance.sh  flywheel-doctor.sh  flywheel-enroll.sh  flywheel-enrollment-contract-test.sh  flywheel-verify.sh  gf-reapi-bazel-credential-helper.mjs  gloriousflywheel-bazel.sh  mint-gf-reapi-token-from-exchange.sh  scan-internal-endpoints.sh
scripts/bazel/: run-svelte-check.mjs  run-sveltekit-sync.mjs  run-sveltekit-vite-build.mjs
src/: app.css  app.html
src/lib/: scale.test.ts  scale.ts
src/lib/components/: ChainWaxEmulsionScaler.svelte  ChainWaxHotMeltScaler.svelte  DepilatoryHardWaxScaler.svelte  DepilatoryStripWaxScaler.svelte  GlueScaler.svelte  GlueScalerPinch.svelte  SEOHead.svelte  WeightScaler.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/chain-wax/: +page.svelte
src/routes/hair-removal-wax/: +page.svelte
static/: robots.txt
tofu/: README.md  backend.tf  main.tf  spoke.auto.tfvars
