"""
Root BUILD.bazel for tinyland-goo.

Minimal, toolchain-only. The SvelteKit static site is built by `pnpm run build`
(never Bazel); Bazel owns only a finite graphable check target so module-graph
integrity is provable. The unit-test target + vitest land in a later phase.
"""

load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary", "js_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest = "bin")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "app_srcs",
    srcs = glob(
        [
            "src/**",
            "static/**",
            "scripts/bazel/**/*.mjs",
        ],
        allow_empty = True,
    ) + [
        ".npmrc",
        "package.json",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "svelte.config.js",
        "tsconfig.json",
        "vite.config.ts",
    ],
)

js_binary(
    name = "sveltekit_sync_bin",
    data = [":node_modules"],
    entry_point = "scripts/bazel/run-sveltekit-sync.mjs",
)

js_run_binary(
    name = "sveltekit_types",
    srcs = [":app_srcs"],
    out_dirs = [".svelte-kit"],
    tags = ["flywheel-eligible"],
    tool = ":sveltekit_sync_bin",
)

js_binary(
    name = "svelte_check_bin",
    data = [":node_modules"],
    entry_point = "scripts/bazel/run-svelte-check.mjs",
)

js_test(
    name = "svelte_check_test",
    data = [
        ":app_srcs",
        ":node_modules",
        ":sveltekit_types",
    ],
    entry_point = "scripts/bazel/run-svelte-check.mjs",
    tags = ["flywheel-eligible"],
    timeout = "long",
)

vitest.vitest_test(
    name = "unit_tests",
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    data = [
        ":app_srcs",
        ":node_modules",
        ":node_modules/vitest",
        "vitest.config.ts",
    ],
    tags = [
        "flywheel-eligible",
        "vitest",
    ],
    visibility = ["//visibility:public"],
)

# BUILD-authority RBE target: Bazel runs `svelte-kit sync` + `vite build` as a
# remotely-executable action (the executor lane exercises this). The canonical
# Pages publish still runs `pnpm run build` — this is the Bazel-SSOT build proof,
# never the deploy path. Tagged gloriousflywheel-rbe-candidate to mirror the fleet.
js_test(
    name = "sveltekit_vite_build_smoke",
    data = [
        ":app_srcs",
        ":node_modules",
        ":sveltekit_types",
    ],
    entry_point = "scripts/bazel/run-sveltekit-vite-build.mjs",
    tags = [
        "flywheel-eligible",
        "gloriousflywheel-rbe-candidate",
        "web-build-runtime-authority",
    ],
    timeout = "long",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "ci_validation_suite",
    # A test_suite's tags are a positive FILTER over members (all carry
    # flywheel-eligible), keeping it under the flywheel-executor tag filter. Do
    # NOT add "manual" — it would drop the members and resolve to zero targets.
    tags = ["flywheel-eligible"],
    tests = [
        ":svelte_check_test",
        ":unit_tests",
        ":sveltekit_vite_build_smoke",
    ],
)

exports_files(
    [
        "MODULE.bazel",
        "package.json",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "svelte.config.js",
        "tsconfig.json",
        "vite.config.ts",
    ],
    visibility = ["//visibility:public"],
)
